src/openlmis-file-upload/file-upload.scss
/*
File Picker

Use input with "file" type to add file picker functionality.

markup:
<form>
    <label for="file-input">File</label>
    <input id="file-input" type="file" ng-model="vm.file" accept="image/jpg"/>
</form>


Styleguide 3.6
*/

.openlmis-file-upload {

    display: flex;
    align-items: flex-end;
    overflow: hidden;

    input[type=file] {
        @extend .sr-only;
    }

    button.file {
        @extend button.primary;
        @include button($button-color-default);
        @include button-icon('file');
    }

    .btn-file,
    input[type=submit].file {
        @extend button.file;
    }

    button.file {
        margin-right: 0.5em;
    }

    .clear {
        position: absolute;
        right: 0;
        top: 0;
        margin: 0.5em 0.5em;
        cursor: pointer;
        color: $light-gray;
        @include icon('remove');
    }

    p {
        margin: 0 1em;
    }

    .file-icon {
        @include icon('file');
    }
}

.openlmis-file-upload.is-empty {
    box-shadow: none;
    border: none;
}

